# guido

./: .gitignore  README.md  pyproject.toml
configs/: baseline.yaml
configs/V1/: convnxt&augm2.yaml  crossatn_fusion.yaml  data_augm.yaml  data_augm2.yaml  fixed_unfreeze_1blk.yaml  hidden_dims.yaml  hor-weighted_loss.yaml  just_one_more.yaml  tfmr-dec-tuned.yaml  unfreeze_1blk&mlp_dec.yaml  unfreeze_1blk&tfmr_dec.yaml  unfreeze_1blk&xattn&tfmr_dec_1l.yaml  unfreeze_1blk&xattn&tfmr_dec_2l.yaml  unfreeze_1blk&xattn&tfmr_dec_S.yaml  unfreeze_1blk&xattn&tfmr_dec_S_resid.yaml  unfreeze_1blk&xattn&tfmr_dec_m.yaml  unfreeze_1blk&xattn&tfmr_dec_m_resid.yaml  unfreeze_1blk&xattn&tfmr_decp_S.yaml  unfreeze_1blk&xattn&tfmr_decp_S_resid.yaml  unfreeze_1blk&xattn&tfmr_decp_m.yaml  unfreeze_1blk&xattn&tfmr_decp_m_resid.yaml  unfreeze_2blk&mlp_dec.yaml  unfreeze_2blk&xattn&tfmr_dec_L.yaml  unfreeze_2blk&xattn&tfmr_dec_M.yaml  vitb&augm2&conv_dec.yaml  vitb&augm2&tfmr_dec.yaml  vitb&augm2.yaml  vitb_backbone.yaml  vitsplus&augm2.yaml
configs/early-tests/: baseline.yaml  v2.yaml  v3.yaml  v4.yaml  v5.yaml
notebooks/: DLAV_Phase1.ipynb  starter.ipynb
scripts/: submit_eval.sh  submit_train.sh
src/: predict.py  train.py
src/guido/: __init__.py  dataset.py  losses.py  model.py  utils.py
